--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
+    <!-- React-leaflet으로 바인딩된 Leaflet.js에서 요구하는 CSS 스타일은 여기에 정의되어 있습니다. -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
